# rustgrad

./: Cargo.toml  README.md  test.py
deep_flatten/: Cargo.toml
deep_flatten/src/: lib.rs
diskcache-proc-macro/: Cargo.toml
diskcache-proc-macro/src/: lib.rs
get_shape/: Cargo.toml
get_shape/src/: lib.rs
init_c_struct_proc_macro/: Cargo.toml
init_c_struct_proc_macro/src/: lib.rs
src/: helpers.rs  lib.rs  main.rs  prelude.rs
src/rustgrad/: device.rs  dtype.rs  helpers.rs  ops.rs
src/rustgrad/codegen/: kernel.rs
src/rustgrad/shape/: shapetracker.rs  sym.rs  view.rs
src/shape/symbolic/: helpers.rs  mod.rs
