[package]
name = "rustgrad-2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main_test"
path = "src/main.rs"

[dependencies]
lazy_static = "1.5.0"
regex = "1.10.5"
deep_flatten ={ path = "./deep_flatten"}
serde_json = "1.0.118"
serde = {version = "1.0.203", features = ["derive"]}
anyhow = "1.0.86"
get_shape ={ path = "./get_shape"}
memoize = "0.4.2"
pprof = {version = "0.13.0", features = ["flamegraph", "protobuf", "protobuf-codec"]}
inferno = "0.11.19"
dirs = "5.0.1"
rusqlite = {version = "0.31.0", features = ["trace", "bundled"]}
serde-pickle = "1.1.1"
diskcache-proc-macro ={ path = "./diskcache-proc-macro"}
md5 = "0.7.0"
reqwest = {version = "0.12.5", features = ["json", "stream"]}
tempfile = "3.10.1"
tokio = {version = "1.38.0", features = ["full"]}
indicatif = "0.17.8"
futures-util = "0.3.30"
init_c_struct_proc_macro = {path = "./init_c_struct_proc_macro"}

